deploy/azure/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: buzz
  labels:
    app.kubernetes.io/part-of: buzz
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
